# Workbench

./: .editorconfig  .eslintignore  .eslintrc.yaml  .eslintrc.yml  .gitattributes  .gitconfig  .gitignore  .gitmodules  .prettierignore  CONTRIBUTING.md  Makefile  README.md  Workbench.doap  blueprint-logs  gtk-inspector.patch  hover.js  icon.js  jsconfig.json  meson.build  notes.txt  open_folder.js  package-lock.json  package.json  postcss-scopify.js  re.sonny.Workbench.Devel.json  re.sonny.Workbench.flatpak  re.sonny.Workbench.json  rollup.config.js  rome.json  ruff.toml  vte-gtk4-gjs.patch  window.js
.github/: CODEOWNERS
.github/workflows/: CD.yaml  CI.yaml  ci.yml  deploy.yaml
build-aux/: README.md  black.sh  exceptions.json  fun  library-index.js  library.js  list-demo-blp-files.sh  re.sonny.Workbench.Devel.json  re.sonny.Workbench.json
build-aux/modules/: GTKCssLanguageServer.json  biome.json  blueprint-compiler.json  cargo-c-sources.json  cargo-c.json  gom.json  gst-plugin-gtk4-sources.json  gst-plugin-gtk4.json  gst-plugin-rs-sources.json  gst-plugins-rs.json  icon-development-kit.json  libportal.json  libshumate.json  libspelling.json  python-black.json  python-pyflakes.json  python-python-lsp-ruff.json  (+7 more)
data/: app.desktop  app.gschema.xml  app.metainfo.xml  app.service  meson.build  re.sonny.Workbench.desktop  re.sonny.Workbench.gschema.xml  re.sonny.Workbench.metainfo.xml  re.sonny.Workbench.service  re.sonny.Workbench.vala_previewer.desktop  re.sonny.Workbench.vala_previewer.service  re.sonny.WorkbenchPreviewer.desktop  re.sonny.WorkbenchPreviewer.service  session.gschema.xml
docs/: debugging.md  design-goals.md  maintenance.md
po/: LINGUAS  POTFILES  ar.po  ca.po  cs.po  de.po  es.po  fa.po  fr.po  he.po  hr.po  id.po  it.po  ja.po  meson.build  nb_NO.po  nl.po  pl.po  pt_BR.po  re.sonny.Workbench.pot  ru.po  ta.po  tr.po  vi.po  zh_Hans.po
src/: Compiler.js  Console.js  DBusPreviewer.js  Devtools.js  Document.js  DocumentUI.js  DocumentationViewer.blp  DocumentationViewer.js  Extensions.blp  Extensions.js  Library.js  PanelCode.js  PanelStyle.js  PanelUI.js  Previewer.js  Shortcuts.js  ShortcutsWindow.js  ShortcutsWindow.ui  TermConsole.js  Terminal.js  ThemeSelector.blp  ThemeSelector.js  WorkbenchHoverProvider.js  about.js  actions.js  app.gresource.xml  application.js  bin.js  blueprint.lang  code.js  common.js  css.js  csstree.js  editor_utils.js  flatpak.js  icon-development-kit.json  init.js  log_handler.js  logger.js  lsp.js  (+31 more)
src/Extensions/: Extension.blp  Extension.js  Extensions.blp  Extensions.js
src/IconLibrary/: IconWidget.blp  IconWidget.js  main.blp  main.js
src/Manuals/: DocumentationViewer.blp  DocumentationViewer.js  Shortcuts.blp  Shortcuts.js  fzy.js
src/Permissions/: Permissions.blp  Permissions.js
src/Previewer/: DBusPreviewer.js  External.js  Internal.js  Previewer.js  TemplateResource.js  crasher.vala  meson.build  previewer.vala  previewer.xml  python_previewer.xml  utils.js
src/Previewer/vala-previewer/: meson.build  previewer.vala
src/Save File/: main.blp  main.js  main.json
src/cli/: README.md  bin.js  format.js  javascript.js  lint.js  local.js  main.js  meson.build  re.sonny.Workbench.cli.src.gresource  typescript.js  util.js  vala.js
src/demos/Application window/: main.blp  main.json  main.ui
src/demos/Blueprint/: main.blp  main.css  main.json
src/demos/Notifications/: main.blp  main.json  main.ui
src/demos/Toasts/: main.blp  main.js  main.json  main.ui
src/demos/WebSocket client/: main.blp  main.js  main.json  main.ui
src/demos/Welcome/: main.blp  main.json  main.ui  main.vala
src/js/: actions.js  code.js  terminal.js  util.js  window.js
src/langs/: javascript.js  vala.js
src/langs/blueprint/: BlueprintDocument.js  blueprint.js
src/langs/c/: Compiler.js  c.js  workbench.c
src/langs/css/: CssDocument.js  css.js  meson.build  prettier.js
src/langs/javascript/: Builder.js  JavaScriptDocument.js  biome.json  javascript.js  jsconfig.json  meson.build
src/langs/javascript/template/: jsconfig.json
src/langs/python/: Builder.js  PythonDBusPreviewer.js  PythonDocument.js  gdbus_ext.py  meson.build  python-previewer.py  python.js  workbench-python-previewer
src/langs/python/template/: workbench.py
src/langs/rust/: Compiler.js  README.md  RustDocument.js  lib.rs  rust.js
src/langs/rust/src/: lib.rs  workbench.rs
src/langs/rust/template/: Cargo.toml  lib.rs  meson.build  workbench.rs
src/langs/typescript/: Compiler.js  TypeScriptDocument.js  meson.build  typescript.js
src/langs/typescript/template/: meson.build  tsconfig.demos.json  tsconfig.json
src/langs/typescript/template/types/: ambient.d.ts  gi-module.d.ts
src/langs/typescript/types/: ambient.d.ts  workbench.d.ts
src/langs/vala/: Compiler.js  ValaDocument.js  meson.build  vala.js  workbench-api.vala  workbench.vala
src/langs/vala/template/: meson.build  workbench.vala
src/langs/xml/: XmlDocument.js  ltx.js  xml.js
src/language-specs/: blueprint.lang
src/lib/: README.md  ltx.js  postcss.js  prettier-babel.js  prettier-estree.js  prettier-postcss.js  prettier-xml.js  prettier.js  rollup.config.js
src/libworkbench/: meson.build  re.sonny.Workbench.libworkbench.gresource.xml  workbench-completion-provider.c  workbench-completion-provider.h  workbench-completion-request.c  workbench-completion-request.h  workbench-dbus-previewer.c  workbench-dbus-previewer.h  workbench-global.c  workbench-global.h  workbench-preview-window.blp  workbench-preview-window.c  workbench-preview-window.h  workbench.h
src/lsp/: JSONRPCClient.js  JSONRPCError.js  LSP.js  LSPClient.js  README.md  promiseEvent.js  sourceview.js  test.js
src/vala-previewer/: meson.build  previewer.blp  previewer.gresource.xml  previewer.vala
src/widgets/: CodeFind.blp  CodeFind.js  CodeView.blp  CodeView.js  Modal.blp  Modal.js  Search.blp  Search.js
test/: assert.js  assertBuiladble.test.js  init.js  isDeviceInputOverrideAvailable.test.js  isDiagnosticInRange.test.js  lsp.test.js  previewer.js  previewer.test.js  uvu.js  workbench.test.js  xml.test.js
(+5 files in other folders)
