[package]
name = "demo"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.2.0"
libc = "0.2"
rand = "0.8.5"
url = "2.5.0"

[dependencies.soup3]
version = "0.6.0"
features = ["v3_4"]

[dependencies.webkit6]
version = "0.3.0"
features = ["v2_42"]

[dependencies.gtk]
version = "0.8.1"
package = "gtk4"
features = ["gnome_46"]

[dependencies.adw]
version = "0.6.0"
package = "libadwaita"
features = ["v1_5"]

[dependencies.ashpd]
version = "0.8.1"
features = ["gtk4"]

[dependencies.shumate]
version = "0.5.0"
package = "libshumate"
features = ["v1_2"]

[lib]
crate-type = ["cdylib"]
path = "lib.rs"
